--- a/index-2.html
+++ b/index-2.html
@@ -4,15 +4,15 @@
 		<meta charset="UTF-8">
 		<title>Barbearia Alura</title>
 
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="./src/style/reset.css">
+		<link rel="stylesheet" href="./src/style/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="logo.png"></h1>
+				<h1><img src="./src/img/logo.png"></h1>
 
 				<nav>
 					<ul>
@@ -24,13 +24,13 @@
 			</div>
 		</header>
 
-		<img class="banner" src="banner.jpg">
+		<img class="banner" src="./src/img/banner.jpg">
 
 		<main>
 			<section class="principal">
 				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
-				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro.">
+				<img class="utensilios" src="./src/img/utensilios.jpg" alt="Utensilios de um barbeiro.">
 		 
 				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
@@ -56,7 +56,7 @@
 					<li class="itens">Profissionais Qualificados</li>
 				</ul>
 
-				<img src="beneficios.jpg" class="imagembeneficios">
+				<img src="./src/img/beneficios.jpg" class="imagembeneficios">
 
 				<div class="video">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -65,7 +65,7 @@
 		</main>
 
 		<footer>
-			<img src="logo-branco.png">
+			<img src="./src/img/logo">
 			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 		</footer>
 	</body>
